--- a/src/gui/style.css
+++ b/src/gui/style.css
@@ -1,4 +1,4 @@
-.button {
+.button, .combo-box-base {
 	-fx-background-color: linear-gradient(#686868 0%, #232723 25%, #373837 75%, #757575 100%),
 		linear-gradient(#020b02, #3a3a3a),
 		linear-gradient(#b9b9b9 0%, #c2c2c2 20%, #afafaf 80%, #c8c8c8 100%),
@@ -14,20 +14,21 @@
 		0, 1);
 }
 
-.button:hover {
+.button:hover, .combo-box-base:showing, .combo-box-base:hover {
 	-fx-background-color: linear-gradient(#686868 0%, #232723 25%, #373837 75%, #757575 100%),
 		linear-gradient(#020b02, #3a3a3a),
 		linear-gradient(#9d9e9d 0%, #6b6a6b 20%, #343534 80%, #242424 100%),
 		linear-gradient(#8a8a8a 0%, #6b6a6b 20%, #343534 80%, #262626 100%),
 		linear-gradient(#777777 0%, #606060 50%, #505250 51%, #2a2b2a 100%);
-	-fx-background-insets: 0, 1, 4, 5, 6;
-	-fx-background-radius: 9, 8, 5, 4, 3;
-	-fx-font-family: "Helvetica";
-	-fx-font-size: 14px;
-	-fx-font-weight: bold;
 	-fx-text-fill: white;
-	-fx-effect: dropshadow(three-pass-box, rgba(255, 255, 255, 0.2), 1, 0.0,
-		0, 1);
+}
+
+.combo-box-base {
+	-fx-padding: 0 0 0 0;
+}
+
+.combo-box {
+	-fx-text-fill: #333333;
 }
 
 .label {
@@ -125,6 +126,8 @@
 		));
 	-fx-font-family: "Impact";
 	-fx-font-size: 30pt;
+	-fx-background-radius: 0;
+	-fx-padding: 5 5 5 30;
 }
 
 #dialog {
