Herausforderung, leider noch ziemlich buggy

--- a/src/gui/klassisch.css
+++ b/src/gui/klassisch.css
@@ -133,6 +133,7 @@
 #dialog {
 	-fx-background-color: #006464;
 	-fx-background-radius: 10;
+	-fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.4), 10, 0.5, 0.0, 0.0);
 }
 
 #detail-root {
