--- a/src/gui/klassisch.css
+++ b/src/gui/klassisch.css
@@ -118,7 +118,7 @@
 }
 
 #weiss {
-	-fx-background-color: rgba(255, 255, 255, 0.5);
+	-fx-background-color: rgba(255, 255, 255, 0.8);
 }
 
 #menu-punkte {
@@ -128,6 +128,7 @@
 	-fx-font-size: 30pt;
 	-fx-background-radius: 0;
 	-fx-padding: 5 5 5 30;
+	-fx-text-fill:#000000;
 }
 
 #dialog {
