--- a/src/gui/modern.css
+++ b/src/gui/modern.css
@@ -11,7 +11,10 @@
 
 }
 .button:hover {
-	-fx-background-color: #3a3a3a; } .button :default {
+	-fx-background-color: #3a3a3a;
+}
+
+.button :default {
 	-fx-background-color: #008287;
 	-fx-text-fill: #ffffff;
 }
@@ -20,66 +23,64 @@
 	-fx-background-color: #219297;
 }
 
+.combo-box-base {
+	-fx-background-color: transparent, #e2e2e2, transparent, #4a4a4a;
+	-fx-background-radius: 0, 0, 0, 0;
+	-fx-padding: 0.166667em; /* 2 */
+}
 
-.combo-box-base  {
-    -fx-background-color: transparent, #e2e2e2, transparent, #4a4a4a;
-    -fx-background-radius: 0, 0, 0, 0;
-    -fx-padding: 0.166667em; /* 2 */
+.combo-box-base  .list-cell {
+	-fx-text-fill: white;
 }
- 
-.combo-box-base  .list-cell{
-    -fx-text-fill: white;
-}
- 
+
 .combo-box-base:hover {
-    -fx-background-color: transparent, white, transparent, #4a4a4a;
-     
+	-fx-background-color: transparent, white, transparent, #4a4a4a;
 }
- 
+
 .combo-box-base:disabled {
-    -fx-opacity: .4;
+	-fx-opacity: .4;
 }
- 
+
 .combo-box-base .arrow-button {
-    -fx-background-color: transparent, transparent, #4a4a4a;
+	-fx-background-color: transparent, transparent, #4a4a4a;
 }
- 
+
 .combo-box-base .arrow {
-    -fx-padding: 0.333333em 0.333333em 0.333333em 0.333333em; /* 4 4 4 4 */
-    -fx-shape: "M8.124,13.625l4.125-3.375v2.889l-4.125,3.86L4,13.139V10.25L8.124,13.625z";
-    -fx-background-color: transparent, #1d1d1d;
+	-fx-padding: 0.333333em 0.333333em 0.333333em 0.333333em; /* 4 4 4 4 */
+	-fx-shape:
+		"M8.124,13.625l4.125-3.375v2.889l-4.125,3.86L4,13.139V10.25L8.124,13.625z";
+	-fx-background-color: transparent, #1d1d1d;
 }
- 
+
 .combo-box-popup .list-view {
-    -fx-background-color: #4a4a4a, -fx-control-inner-background;
-    -fx-effect: dropshadow( three-pass-box , rgba(0,0,0,0) , 8, 0.0 , 0 , 0 );
+	-fx-background-color: #4a4a4a, -fx-control-inner-background;
+	-fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0), 8, 0.0, 0, 0);
 }
- 
-.combo-box-popup .list-view .list-cell{
-    -fx-background-color: #4a4a4a;
-    -fx-text-fill: white;
+
+.combo-box-popup .list-view .list-cell {
+	-fx-background-color: #4a4a4a;
+	-fx-text-fill: white;
 }
- 
-.combo-box-popup .list-view .list-cell:hover{
-    -fx-background-color: #dedede;
-    -fx-text-fill: #1d1d1d;
+
+.combo-box-popup .list-view .list-cell:hover {
+	-fx-background-color: #dedede;
+	-fx-text-fill: #1d1d1d;
 }
- 
- 
- 
-.combo-box-popup .list-view .list-cell:filled:selected{
-    -fx-background-color: #55c4fe;
+
+.combo-box-popup .list-view .list-cell:filled:selected {
+	-fx-background-color: #55c4fe;
 }
- 
+
 .combo-box-popup .list-view .list-cell:filled:selected:hover {
-    -fx-background-color: #6dcdff;
+	-fx-background-color: #6dcdff;
 }
- 
+
 .combo-box-popup .list-view .list-cell:filled:pressed, .combo-box-popup .list-view .list-cell:filled:selected:pressed
-{
-    -fx-background-color: #d3d3d3;
-    -fx-text-fill: #1d1d1d;
+	{
+	-fx-background-color: #d3d3d3;
+	-fx-text-fill: #1d1d1d;
 }
+
 .label {
 	-fx-font-weight: bold;
 	-fx-text-fill: #111111;
@@ -90,19 +91,19 @@
 
 .slider .thumb {
 	-fx-background-color: #b8b8b8;
-    -fx-background-insets: 0;
-    -fx-background-radius: 0;
+	-fx-background-insets: 0;
+	-fx-background-radius: 0;
 }
 
 .slider .track {
 	-fx-background-color: #4a4a4a;
-    -fx-background-insets: 0;
-    -fx-background-radius: 0;
+	-fx-background-insets: 0;
+	-fx-background-radius: 0;
 }
 
 .slider .track-background {
-     -fx-background-color: #4a4a4a;
-    -fx-background-insets: 0;
+	-fx-background-color: #4a4a4a;
+	-fx-background-insets: 0;
 }
 
 #chat-textfield {
@@ -145,13 +146,15 @@
 	-fx-font-size: 28;
 	-fx-font-weight: bold;
 	-fx-padding: 30px;
-	-fx-background-color: rgba(0, 100, 100, 1);
+	-fx-background-color: #1d1d1d;
 	-fx-background-radius: 0;
 	-fx-text-fill: #ffffff;
+	-fx-border-color: #e2e2e2;
+	-fx-border-width: 2;
 }
 
 #weiss {
-	-fx-background-color: rgba(255, 255, 255, 0.5);
+	-fx-background-color: rgba(255, 255, 255, 0.8);
 }
 
 #menu-punkte {
