--- a/src/com/superschach/superschach/gui/klassisch.css
+++ b/src/com/superschach/superschach/gui/klassisch.css
@@ -128,7 +128,7 @@
 	-fx-font-size: 30pt;
 	-fx-background-radius: 0;
 	-fx-padding: 5 5 5 30;
-	-fx-text-fill:#000000;
+	-fx-text-fill: #000000;
 }
 
 #dialog {
@@ -142,4 +142,15 @@
 	-fx-background-radius: 10;
 	-fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.6), 5, 0.0, 0, 1);
 	-fx-padding: 20px;
+}
+
+#namensfeld {
+	-fx-background-color: transparent;
+	-fx-text-fill: #111111;
+	-fx-font-size: 24;
+	-fx-effect: dropshadow(three-pass-box, rgba(255, 255, 255, 0.2), 1, 0.0,
+		0, 1);
+	-fx-font-weight: bold;
+	-fx-highlight-fill: null;
+	-fx-highlight-text-fill: -fx-text-fill;
 }
