--- a/src/com/superschach/superschach/gui/modern.css
+++ b/src/com/superschach/superschach/gui/modern.css
@@ -172,3 +172,15 @@
 	-fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.6), 5, 0.0, 0, 1);
 	-fx-padding: 20px;
 }
+
+
+#namensfeld {
+	-fx-background-color: transparent;
+	-fx-text-fill: #111111;
+	-fx-font-size: 24;
+	-fx-effect: dropshadow(three-pass-box, rgba(255, 255, 255, 0.2), 1, 0.0,
+		0, 1);
+	-fx-font-weight: bold;
+	-fx-highlight-fill: null;
+	-fx-highlight-text-fill: -fx-text-fill;
+}
